--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/node": "^20.14.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "discord.js": "^14.0.0",
     "dotenv": "^16.0.0",
